--- a/furniture.html
+++ b/furniture.html
@@ -23,7 +23,7 @@
   <body>
     <div class="year-end-sale-wrapper bg-success text-center text-white">
       <div class="year-end-sale-content">
-        <div>+959250048922</div>
+        <a href="tel:+959250048922"> +959250048922 </a>
         <div>
           <span class="text-uppercase">Year End Sale</span> - Up to 50% Off
         </div>
@@ -155,6 +155,9 @@
         <h2>Furniture For You</h2>
         <div>
           <input type="text" placeholder="Search.." name="search" />
+          <button type="submit">
+            <i class="fa fa-search"></i>
+          </button>
         </div>
       </div>
       <div class="container-fluid row-2">
@@ -209,29 +212,33 @@
         <div class="col-s-8 col-10">
           <div class="container-fluid row product-card-wrapper">
             <div class="col-4">
-              <a href="product1.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product1.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="assets/img/chair.svg"
                     alt="outdoor chair"
                     width="300"
                     height="300"
-                  />
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      Portable Rocking Chair & Outdoor Camping Chair
-                    </h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                /></a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    Portable Rocking Chair & Outdoor Camping Chair
+                  </h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product2.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product2.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="assets/img/sofa.svg"
@@ -239,18 +246,23 @@
                     width="300"
                     height="300"
                   />
-                  <div class="card-body">
-                    <h4 class="card-title">Intex-Inflatable Corner-Sofa</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">Intex-Inflatable Corner-Sofa</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product3.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product3.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/71QVZUOEy3L._AC_SL1500_.jpg"
@@ -258,56 +270,69 @@
                     width="300"
                     height="300"
                   />
-                  <div class="card-body">
-                    <h4 class="card-title">Camping Hammock</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">Camping Hammock</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product4.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product4.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/71kFBfvq1VL._AC_SL1500_.jpg"
                     alt="Outdoor Folding Table"
                     width="300"
                     height="300"
-                  />
-                  <div class="card-body">
-                    <h4 class="card-title">Outdoor Folding Table</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                /></a>
+                <div class="card-body">
+                  <h4 class="card-title">Outdoor Folding Table</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product1.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product1.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/71VnxCh-ZiL._AC_SL1500_.jpg"
                     alt="Outdoor Slim-Fold Cook Station"
                     width="300"
                     height="300"
-                  />
-                  <div class="card-body">
-                    <h4 class="card-title">Outdoor Slim-Fold Cook Station</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                /></a>
+                <div class="card-body">
+                  <h4 class="card-title">Outdoor Slim-Fold Cook Station</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product2.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product2.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/81j9d4UPYXL._AC_SL1500_.jpg"
@@ -315,18 +340,23 @@
                     width="300"
                     height="300"
                   />
-                  <div class="card-body">
-                    <h4 class="card-title">Portable Folding Bed</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">Portable Folding Bed</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product3.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product3.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/61fsKSUrs3S._AC_SL1200_.jpg"
@@ -334,18 +364,23 @@
                     width="300"
                     height="300"
                   />
-                  <div class="card-body">
-                    <h4 class="card-title">Outdoor Camping Chair</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">Outdoor Camping Chair</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product4.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product4.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/718Yu-c3RXL._AC_SL1500_.jpg"
@@ -353,18 +388,23 @@
                     width="300"
                     height="300"
                   />
-                  <div class="card-body">
-                    <h4 class="card-title">Picnic Table and Umbrella Comb</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">Picnic Table and Umbrella Comb</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product1.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product1.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/614tqHprpVL._AC_SL1500_.jpg"
@@ -372,18 +412,23 @@
                     width="300"
                     height="300"
                   />
-                  <div class="card-body">
-                    <h4 class="card-title">Camping Tent</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">Camping Tent</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product2.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product2.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/71bMWcLiQaS._AC_SL1500_.jpg"
@@ -391,18 +436,23 @@
                     width="300"
                     height="300"
                   />
-                  <div class="card-body">
-                    <h4 class="card-title">Inflatable Empire Chair</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">Inflatable Empire Chair</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product3.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product3.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/71D4G2EAb2L._AC_SL1500_.jpg"
@@ -410,18 +460,23 @@
                     width="300"
                     height="300"
                   />
-                  <div class="card-body">
-                    <h4 class="card-title">Inflatable Hot Tub</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">Inflatable Hot Tub</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="col-4">
-              <a href="product4.html" class="link">
-                <div class="card text-center">
+              <div class="card text-center">
+                <a href="product4.html" class="link">
                   <img
                     class="card-img-top pb-2"
                     src="https://m.media-amazon.com/images/I/71+sEd4r2rL._AC_SL1000_.jpg"
@@ -429,14 +484,19 @@
                     width="300"
                     height="300"
                   />
-                  <div class="card-body">
-                    <h4 class="card-title">Outdoor Camping Table</h4>
-                    <p>Organic, Sustainable</p>
-                    <h3 class="text-secondary font-bold">$ 100</h3>
-                    <button class="btn btn-primary mt-1">Add to Cart</button>
-                  </div>
+                </a>
+                <div class="card-body">
+                  <h4 class="card-title">Outdoor Camping Table</h4>
+                  <p>Organic, Sustainable</p>
+                  <h3 class="text-secondary font-bold">$ 100</h3>
+                  <button
+                    onclick="alert('Added to Cart!')"
+                    class="btn btn-primary mt-1"
+                  >
+                    Add to Cart
+                  </button>
                 </div>
-              </a>
+              </div>
             </div>
           </div>
         </div>
@@ -464,6 +524,15 @@
               <li><a href="#">Cancellation & Returns</a></li>
               <li><a href="#">FAQ</a></li>
             </ul>
+            <a href="https://www.facebook.com">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.messenger.com">
+              <i class="fa-brands fa-facebook-messenger"></i>
+            </a>
+            <a href="tel: +959250048922">
+              <i class="fa-solid fa-phone"></i>
+            </a>
           </div>
           <div class="col-s-12 col-4 mb-2">
             <h4>Address</h4>
