--- a/review.html
+++ b/review.html
@@ -22,7 +22,11 @@
   <body>
     <div class="year-end-sale-wrapper bg-success text-center text-white">
       <div class="year-end-sale-content">
-        <div>+959250048922</div>
+        <a
+          href="tel:+959250048922"
+        >
+          +959250048922
+        </a>
         <div>
           <span class="text-uppercase">Year End Sale</span> - Up to 50% Off
         </div>
@@ -332,6 +336,15 @@
               <li><a href="#">Cancellation & Returns</a></li>
               <li><a href="#">FAQ</a></li>
             </ul>
+            <a href="https://www.facebook.com">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.messenger.com">
+              <i class="fa-brands fa-facebook-messenger"></i>
+            </a>
+            <a href="tel: +959250048922">
+              <i class="fa-solid fa-phone"></i>
+            </a>
           </div>
           <div class="col-s-12 col-4 mb-2">
             <h4>Address</h4>
